syntax = "proto3";

package kuma.system.v1alpha1;

option go_package = "github.com/kumahq/kuma/api/system/v1alpha1";

import "system/v1alpha1/zone.proto";
import "system/v1alpha1/zone_insight.proto";

// ZoneOverview defines the projected state of a Zone.
message ZoneOverview {

  Zone zone = 1;

  ZoneInsight zone_insight = 2;
}
